--- a/package.json
+++ b/package.json
@@ -3,22 +3,23 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@types/expect-puppeteer": "^3.3.2",
     "@types/jest": "24.0.18",
+    "@types/jest-environment-puppeteer": "^4.3.1",
     "@types/node": "12.7.12",
+    "@types/puppeteer": "^1.20.1",
     "@types/react": "16.9.5",
     "@types/react-dom": "16.9.1",
-    "react": "^16.10.2",
-    "react-dom": "^16.10.2",
-    "react-scripts": "3.2.0",
-    "typescript": "3.6.4",
-    "@types/expect-puppeteer": "^3.3.2",
-    "@types/jest-environment-puppeteer": "^4.3.1",
-    "@types/puppeteer": "^1.20.1",
     "axios": "^0.19.0",
     "jest": "^24.9.0",
     "jest-puppeteer": "^4.3.0",
     "puppeteer": "^1.20.0",
-    "ts-jest": "^24.1.0"
+    "react": "^16.10.2",
+    "react-dom": "^16.10.2",
+    "react-scripts": "3.2.0",
+    "react-select": "^3.0.8",
+    "ts-jest": "^24.1.0",
+    "typescript": "3.6.4"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -40,5 +41,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@types/react-select": "^3.0.5"
   }
 }
